eagle_test/error/this_error.eagle
var b = this.c;
// expected: [Error at line 1] At 'this': Can't use 'this' keyword outside class